[gd_scene load_steps=5 format=3 uid="uid://11mllv7cxnte"]

[ext_resource type="Script" path="res://scenes/mainMenu/MainMenu.gd" id="1_pyhf2"]
[ext_resource type="Texture2D" uid="uid://l5uix5tb341v" path="res://scenes/mainMenu/menubackground.png" id="2_l5pn0"]
[ext_resource type="Theme" uid="uid://38q5to2imxny" path="res://Button_theme.tres" id="2_uwodh"]

[sub_resource type="LabelSettings" id="LabelSettings_27h22"]
font_size = 116

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pyhf2")

[node name="BackgroundTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l5pn0")

[node name="ButtonContinue" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.0173611
anchor_top = 0.322531
anchor_right = 0.289931
anchor_bottom = 0.436728
theme = ExtResource("2_uwodh")
text = "CONTINUE"
metadata/_edit_use_anchors_ = true

[node name="ButtonStart" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0173611
anchor_top = 0.455247
anchor_right = 0.289931
anchor_bottom = 0.569444
offset_bottom = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uwodh")
text = "START"
metadata/_edit_use_anchors_ = true

[node name="ButtonLeaderboard" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0173611
anchor_top = 0.587963
anchor_right = 0.289931
anchor_bottom = 0.70216
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uwodh")
text = "LEADERBOARD"
metadata/_edit_use_anchors_ = true

[node name="ButtonSettings" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0173611
anchor_top = 0.720679
anchor_right = 0.289931
anchor_bottom = 0.834877
offset_top = 3.05176e-05
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uwodh")
text = "SETTINGS"
metadata/_edit_use_anchors_ = true

[node name="ButtonExit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0173611
anchor_top = 0.854938
anchor_right = 0.289931
anchor_bottom = 0.969136
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uwodh")
text = "EXIT"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28559
anchor_top = 0.0524691
anchor_right = 0.736111
anchor_bottom = 0.296296
offset_top = 41.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
text = "AIClicker"
label_settings = SubResource("LabelSettings_27h22")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="ButtonLeaderboard" to="." method="_on_button_leaderboard_pressed"]
[connection signal="pressed" from="ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_button_exit_pressed"]
